Fixed FYPN logo centering issue on Firefox; set header background to fixed instead of scroll

--- a/_sass/_FYPN.scss
+++ b/_sass/_FYPN.scss
@@ -4,7 +4,8 @@
 	display: table;
 	// position: relative;
 	height: 100vh;
-	background: url(../img/jumonville.jpg) no-repeat center center scroll;
+	width: 100vw;
+	background: url(../img/jumonville.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -12,8 +13,7 @@
 }
 
 .header img {
-	max-width: 50%;
-  align-self: center;
+	max-width: 40vw;
 }
 
 /* About Us */
